--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,24 +59,26 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
 
+    env:
+      tf_gcp_working_dir: "gcp"
+
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
         shell: bash
-
+        working-directory: ${{env.tf_gcp_working_dir}}
+      
     steps:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v3
     
-    - name: Change Directory
-      run: cd gcp
-
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
