--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,27 +73,44 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     
+    - name: Setup terraform variables
+      id: vars
+      run: |-
+        cat > terraform.tfvars <<EOF
+        project="${{vars.GCP_PROJECT}}"
+        credential=${{secrets.GCP_CREDENTIALS}}
+        ps_git_tag=${{vars.PRODUCER_SERVICE_IMAGE_TAG}}
+        datasync_image_tag=${{vars.DATASYNC_SERVICE_IMAGE_TAG}}
+
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+        cli_config_credentials_token: ${{secrets.GCP_CREDENTIALS}}
 
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
+      env:
+        GOOGLE_CREDENTIALS: ${{secrets.GCP_CREDENTIALS}}
 
     # # Checks that all Terraform configuration files adhere to a canonical format
-    # - name: Terraform Format
-    #   run: terraform fmt -check
+    - name: Terraform Format
+      run: terraform fmt -check
+      env:
+        GOOGLE_CREDENTIALS: ${{secrets.GCP_CREDENTIALS}}
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: terraform plan -input=false
+      env:
+        GOOGLE_CREDENTIALS: ${{secrets.GCP_CREDENTIALS}}
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
+      env:
+        GOOGLE_CREDENTIALS: ${{secrets.GCP_CREDENTIALS}}
