--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -81,6 +81,9 @@ jobs:
         credential=${{secrets.GCP_CREDENTIALS}}
         ps_git_tag="${{vars.PRODUCER_SERVICE_IMAGE_TAG}}"
         datasync_image_tag="${{vars.DATASYNC_SERVICE_IMAGE_TAG}}"
+        EOF
+        
+
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
