Added a step in github action workflow

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -77,7 +77,7 @@ jobs:
       id: vars
       run: |-
         cat > credentials.json <<EOF
-          ${{secrets.GCP_CREDENTIALS}}
+        test
         EOF
 
         cat > terraform.tfvars <<EOF
