--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -104,11 +104,9 @@ jobs:
         GOOGLE_CREDENTIALS: ${{secrets.GCP_CREDENTIALS}}
 
     # # Checks that all Terraform configuration files adhere to a canonical format
-    - name: Terraform Format
-      run: terraform fmt -check
-      env:
-        GOOGLE_CREDENTIALS: ${{secrets.GCP_CREDENTIALS}}
-
+    # - name: Terraform Format
+    #   run: terraform fmt -check
+  
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: terraform plan -input=false
