--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -89,6 +89,9 @@ jobs:
         
         cat terraform.tfvars
 
+        cat ${{github.event_name}}
+        cat ${{github.ref}}
+
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
@@ -104,8 +107,8 @@ jobs:
         GOOGLE_CREDENTIALS: ${{secrets.GCP_CREDENTIALS}}
 
     # # Checks that all Terraform configuration files adhere to a canonical format
-    # - name: Terraform Format
-    #   run: terraform fmt -check
+    - name: Terraform Format
+      run: terraform fmt -check
   
     # Generates an execution plan for Terraform
     - name: Terraform Plan
