--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -100,6 +100,20 @@ jobs:
       env:
         GOOGLE_CREDENTIALS: ${{secrets.GCP_CREDENTIALS}}
 
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+    - name: 'Set up Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v1'
+      with:
+        project_id: ${{ vars.GCP_PROJECT }}
+        version: '>= 416.0.0'
+
+    - name: 'Use gcloud CLI'
+      run: 'gcloud info'
+
     # # Checks that all Terraform configuration files adhere to a canonical format
     # - name: Terraform Format
     #   run: terraform fmt -check
